tests/errors/semantic/blocking/ADD_ARRAYS_INCOMPATIBLE_SHAPES_0.py
# pylint: disable=missing-function-docstring, missing-module-docstring
import numpy as np

a = np.zeros(10)
x = a[2:4] + a[4:7]
